// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MesocyclesScreen snapshots Active group 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "#0E0F11",
          "flex": 1,
        }
      }
    >
      <RNCSafeAreaView
        edges={
          {
            "bottom": "off",
            "left": "off",
            "right": "off",
            "top": "additive",
          }
        }
        style={
          {
            "backgroundColor": "#141619",
            "paddingBottom": 10,
            "paddingHorizontal": 14,
            "paddingTop": 10,
          }
        }
        testID="root-screen-header"
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 7,
              "justifyContent": "space-between",
            }
          }
        >
          <View
            style={
              {
                "flexShrink": 1,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 7,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#F5F5F4",
                    "flexShrink": 1,
                    "fontSize": 24,
                    "fontWeight": "500",
                  }
                }
              >
                Mesocycles
              </Text>
            </View>
          </View>
          <View
            accessibilityLabel="New mesocycle"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "borderRadius": 15,
                  "height": 30,
                  "justifyContent": "center",
                  "width": 30,
                },
                {
                  "backgroundColor": "#CDFF57",
                },
                false,
                false,
              ]
            }
          >
            <Text
              style={
                {
                  "color": "#232B0A",
                  "fontSize": 22,
                  "fontWeight": "500",
                }
              }
            >
              +
            </Text>
          </View>
        </View>
      </RNCSafeAreaView>
      <View
        style={
          {
            "flex": 1,
            "gap": 7,
            "paddingHorizontal": 14,
            "paddingTop": 14,
          }
        }
        testID="root-screen-body"
      >
        <RCTScrollView
          contentContainerStyle={
            {
              "gap": 18,
              "paddingBottom": 18,
            }
          }
        >
          <View>
            <View
              style={
                {
                  "gap": 7,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#8A9099",
                    "fontSize": 11,
                    "fontWeight": "400",
                    "letterSpacing": 0.04,
                    "textTransform": "uppercase",
                  }
                }
              >
                Active
              </Text>
              <View
                accessibilityLabel="Upper/Lower"
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "backgroundColor": "#1A1C1F",
                      "borderColor": "#4A5A20",
                      "borderRadius": 10,
                      "borderWidth": 1,
                      "gap": 10,
                      "paddingHorizontal": 16,
                      "paddingVertical": 16,
                    },
                    false,
                  ]
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "gap": 7,
                      "justifyContent": "space-between",
                    }
                  }
                >
                  <Text
                    numberOfLines={1}
                    style={
                      {
                        "color": "#F5F5F4",
                        "flex": 1,
                        "fontSize": 19,
                        "fontWeight": "500",
                      }
                    }
                  >
                    Upper/Lower
                  </Text>
                  <View
                    style={
                      [
                        {
                          "alignSelf": "flex-start",
                          "borderRadius": 20,
                          "paddingHorizontal": 7,
                          "paddingVertical": 6,
                        },
                        {
                          "backgroundColor": "#232B0A",
                        },
                      ]
                    }
                  >
                    <Text
                      style={
                        [
                          {
                            "fontSize": 10,
                            "fontWeight": "400",
                          },
                          {
                            "color": "#CDFF57",
                          },
                        ]
                      }
                    >
                      Active
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    {
                      "flexDirection": "row",
                      "gap": 5,
                    }
                  }
                >
                  <View
                    style={
                      [
                        {
                          "backgroundColor": "#2C3036",
                          "borderRadius": 4,
                          "height": 8,
                          "width": 8,
                        },
                        {
                          "backgroundColor": "#4A5A20",
                        },
                        false,
                      ]
                    }
                    testID="week-dot-done"
                  />
                  <View
                    style={
                      [
                        {
                          "backgroundColor": "#2C3036",
                          "borderRadius": 4,
                          "height": 8,
                          "width": 8,
                        },
                        false,
                        {
                          "backgroundColor": "#CDFF57",
                        },
                      ]
                    }
                    testID="week-dot-current"
                  />
                  <View
                    style={
                      [
                        {
                          "backgroundColor": "#2C3036",
                          "borderRadius": 4,
                          "height": 8,
                          "width": 8,
                        },
                        false,
                        false,
                      ]
                    }
                    testID="week-dot-upcoming"
                  />
                  <View
                    style={
                      [
                        {
                          "backgroundColor": "#2C3036",
                          "borderRadius": 4,
                          "height": 8,
                          "width": 8,
                        },
                        false,
                        false,
                      ]
                    }
                    testID="week-dot-upcoming"
                  />
                  <View
                    style={
                      [
                        {
                          "backgroundColor": "#2C3036",
                          "borderRadius": 4,
                          "height": 8,
                          "width": 8,
                        },
                        false,
                        false,
                      ]
                    }
                    testID="week-dot-upcoming"
                  />
                </View>
                <Text
                  style={
                    {
                      "color": "#8A9099",
                      "fontSize": 13,
                      "fontWeight": "400",
                    }
                  }
                >
                  Week 2 of 5 · started 6 Sep
                </Text>
              </View>
            </View>
          </View>
        </RCTScrollView>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`MesocyclesScreen snapshots Completed group 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "#0E0F11",
          "flex": 1,
        }
      }
    >
      <RNCSafeAreaView
        edges={
          {
            "bottom": "off",
            "left": "off",
            "right": "off",
            "top": "additive",
          }
        }
        style={
          {
            "backgroundColor": "#141619",
            "paddingBottom": 10,
            "paddingHorizontal": 14,
            "paddingTop": 10,
          }
        }
        testID="root-screen-header"
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 7,
              "justifyContent": "space-between",
            }
          }
        >
          <View
            style={
              {
                "flexShrink": 1,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 7,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#F5F5F4",
                    "flexShrink": 1,
                    "fontSize": 24,
                    "fontWeight": "500",
                  }
                }
              >
                Mesocycles
              </Text>
            </View>
          </View>
          <View
            accessibilityLabel="New mesocycle"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "borderRadius": 15,
                  "height": 30,
                  "justifyContent": "center",
                  "width": 30,
                },
                {
                  "backgroundColor": "#CDFF57",
                },
                false,
                false,
              ]
            }
          >
            <Text
              style={
                {
                  "color": "#232B0A",
                  "fontSize": 22,
                  "fontWeight": "500",
                }
              }
            >
              +
            </Text>
          </View>
        </View>
      </RNCSafeAreaView>
      <View
        style={
          {
            "flex": 1,
            "gap": 7,
            "paddingHorizontal": 14,
            "paddingTop": 14,
          }
        }
        testID="root-screen-body"
      >
        <RCTScrollView
          contentContainerStyle={
            {
              "gap": 18,
              "paddingBottom": 18,
            }
          }
        >
          <View>
            <View
              style={
                {
                  "gap": 7,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#8A9099",
                    "fontSize": 11,
                    "fontWeight": "400",
                    "letterSpacing": 0.04,
                    "textTransform": "uppercase",
                  }
                }
              >
                Completed
              </Text>
              <View>
                <View
                  style={
                    {
                      "borderBottomColor": "#1E2125",
                      "borderBottomWidth": 1,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "gap": 6,
                        "paddingVertical": 10,
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "alignItems": "baseline",
                            "flexDirection": "row",
                          }
                        }
                      >
                        <Text
                          numberOfLines={1}
                          style={
                            {
                              "color": "#F5F5F4",
                              "flexShrink": 1,
                              "fontSize": 14,
                              "fontWeight": "400",
                            }
                          }
                        >
                          Strength Base
                        </Text>
                      </View>
                      <Text
                        numberOfLines={1}
                        style={
                          {
                            "color": "#6B7076",
                            "fontSize": 13,
                            "fontWeight": "400",
                          }
                        }
                      >
                        4 weeks · 18 Jul – 15 Aug
                      </Text>
                    </View>
                    <View
                      style={
                        {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "gap": 7,
                        }
                      }
                    >
                      <View
                        accessibilityLabel="Copy Strength Base"
                        accessibilityRole="button"
                        accessibilityState={
                          {
                            "busy": undefined,
                            "checked": undefined,
                            "disabled": undefined,
                            "expanded": undefined,
                            "selected": undefined,
                          }
                        }
                        accessibilityValue={
                          {
                            "max": undefined,
                            "min": undefined,
                            "now": undefined,
                            "text": undefined,
                          }
                        }
                        accessible={true}
                        collapsable={false}
                        focusable={true}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          [
                            {
                              "borderRadius": 20,
                              "borderWidth": 1,
                              "paddingHorizontal": 10,
                              "paddingVertical": 6,
                            },
                            {
                              "borderColor": "#2A2D31",
                            },
                            false,
                          ]
                        }
                      >
                        <Text
                          style={
                            [
                              {
                                "fontSize": 13,
                                "fontWeight": "400",
                              },
                              {
                                "color": "#C9CDD2",
                              },
                            ]
                          }
                        >
                          Copy
                        </Text>
                      </View>
                      <View
                        accessibilityLabel="More actions for Strength Base"
                        accessibilityRole="button"
                        accessibilityState={
                          {
                            "busy": undefined,
                            "checked": undefined,
                            "disabled": false,
                            "expanded": undefined,
                            "selected": undefined,
                          }
                        }
                        accessibilityValue={
                          {
                            "max": undefined,
                            "min": undefined,
                            "now": undefined,
                            "text": undefined,
                          }
                        }
                        accessible={true}
                        collapsable={false}
                        focusable={true}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          [
                            {
                              "alignItems": "center",
                              "borderRadius": 15,
                              "height": 30,
                              "justifyContent": "center",
                              "width": 30,
                            },
                            {
                              "backgroundColor": "#1A1C1F",
                            },
                            false,
                            false,
                          ]
                        }
                      >
                        <Text
                          style={
                            {
                              "color": "#C9CDD2",
                              "fontSize": 15,
                            }
                          }
                        >
                          ⋯
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RCTScrollView>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`MesocyclesScreen snapshots Planned group 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "#0E0F11",
          "flex": 1,
        }
      }
    >
      <RNCSafeAreaView
        edges={
          {
            "bottom": "off",
            "left": "off",
            "right": "off",
            "top": "additive",
          }
        }
        style={
          {
            "backgroundColor": "#141619",
            "paddingBottom": 10,
            "paddingHorizontal": 14,
            "paddingTop": 10,
          }
        }
        testID="root-screen-header"
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 7,
              "justifyContent": "space-between",
            }
          }
        >
          <View
            style={
              {
                "flexShrink": 1,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 7,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#F5F5F4",
                    "flexShrink": 1,
                    "fontSize": 24,
                    "fontWeight": "500",
                  }
                }
              >
                Mesocycles
              </Text>
            </View>
          </View>
          <View
            accessibilityLabel="New mesocycle"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "borderRadius": 15,
                  "height": 30,
                  "justifyContent": "center",
                  "width": 30,
                },
                {
                  "backgroundColor": "#CDFF57",
                },
                false,
                false,
              ]
            }
          >
            <Text
              style={
                {
                  "color": "#232B0A",
                  "fontSize": 22,
                  "fontWeight": "500",
                }
              }
            >
              +
            </Text>
          </View>
        </View>
      </RNCSafeAreaView>
      <View
        style={
          {
            "flex": 1,
            "gap": 7,
            "paddingHorizontal": 14,
            "paddingTop": 14,
          }
        }
        testID="root-screen-body"
      >
        <RCTScrollView
          contentContainerStyle={
            {
              "gap": 18,
              "paddingBottom": 18,
            }
          }
        >
          <View>
            <View
              style={
                {
                  "gap": 7,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#8A9099",
                    "fontSize": 11,
                    "fontWeight": "400",
                    "letterSpacing": 0.04,
                    "textTransform": "uppercase",
                  }
                }
              >
                Planned
              </Text>
              <View>
                <View
                  style={
                    {
                      "borderBottomColor": "#1E2125",
                      "borderBottomWidth": 1,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "gap": 6,
                        "paddingVertical": 10,
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "alignItems": "baseline",
                            "flexDirection": "row",
                          }
                        }
                      >
                        <Text
                          numberOfLines={1}
                          style={
                            {
                              "color": "#F5F5F4",
                              "flexShrink": 1,
                              "fontSize": 14,
                              "fontWeight": "400",
                            }
                          }
                        >
                          Push/Pull/Legs
                        </Text>
                      </View>
                      <Text
                        numberOfLines={1}
                        style={
                          {
                            "color": "#6B7076",
                            "fontSize": 13,
                            "fontWeight": "400",
                          }
                        }
                      >
                        6 weeks · 3 days/week
                      </Text>
                    </View>
                    <View
                      style={
                        {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "gap": 7,
                        }
                      }
                    >
                      <View
                        accessibilityLabel="Start Push/Pull/Legs"
                        accessibilityRole="button"
                        accessibilityState={
                          {
                            "busy": undefined,
                            "checked": undefined,
                            "disabled": undefined,
                            "expanded": undefined,
                            "selected": undefined,
                          }
                        }
                        accessibilityValue={
                          {
                            "max": undefined,
                            "min": undefined,
                            "now": undefined,
                            "text": undefined,
                          }
                        }
                        accessible={true}
                        collapsable={false}
                        focusable={true}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          [
                            {
                              "borderRadius": 20,
                              "borderWidth": 1,
                              "paddingHorizontal": 10,
                              "paddingVertical": 6,
                            },
                            {
                              "backgroundColor": "#CDFF57",
                              "borderColor": "#CDFF57",
                            },
                            false,
                          ]
                        }
                      >
                        <Text
                          style={
                            [
                              {
                                "fontSize": 13,
                                "fontWeight": "400",
                              },
                              {
                                "color": "#232B0A",
                              },
                            ]
                          }
                        >
                          Start
                        </Text>
                      </View>
                      <View
                        accessibilityLabel="More actions for Push/Pull/Legs"
                        accessibilityRole="button"
                        accessibilityState={
                          {
                            "busy": undefined,
                            "checked": undefined,
                            "disabled": false,
                            "expanded": undefined,
                            "selected": undefined,
                          }
                        }
                        accessibilityValue={
                          {
                            "max": undefined,
                            "min": undefined,
                            "now": undefined,
                            "text": undefined,
                          }
                        }
                        accessible={true}
                        collapsable={false}
                        focusable={true}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          [
                            {
                              "alignItems": "center",
                              "borderRadius": 15,
                              "height": 30,
                              "justifyContent": "center",
                              "width": 30,
                            },
                            {
                              "backgroundColor": "#1A1C1F",
                            },
                            false,
                            false,
                          ]
                        }
                      >
                        <Text
                          style={
                            {
                              "color": "#C9CDD2",
                              "fontSize": 15,
                            }
                          }
                        >
                          ⋯
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RCTScrollView>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`MesocyclesScreen snapshots all three groups 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "#0E0F11",
          "flex": 1,
        }
      }
    >
      <RNCSafeAreaView
        edges={
          {
            "bottom": "off",
            "left": "off",
            "right": "off",
            "top": "additive",
          }
        }
        style={
          {
            "backgroundColor": "#141619",
            "paddingBottom": 10,
            "paddingHorizontal": 14,
            "paddingTop": 10,
          }
        }
        testID="root-screen-header"
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 7,
              "justifyContent": "space-between",
            }
          }
        >
          <View
            style={
              {
                "flexShrink": 1,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 7,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#F5F5F4",
                    "flexShrink": 1,
                    "fontSize": 24,
                    "fontWeight": "500",
                  }
                }
              >
                Mesocycles
              </Text>
            </View>
          </View>
          <View
            accessibilityLabel="New mesocycle"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "borderRadius": 15,
                  "height": 30,
                  "justifyContent": "center",
                  "width": 30,
                },
                {
                  "backgroundColor": "#CDFF57",
                },
                false,
                false,
              ]
            }
          >
            <Text
              style={
                {
                  "color": "#232B0A",
                  "fontSize": 22,
                  "fontWeight": "500",
                }
              }
            >
              +
            </Text>
          </View>
        </View>
      </RNCSafeAreaView>
      <View
        style={
          {
            "flex": 1,
            "gap": 7,
            "paddingHorizontal": 14,
            "paddingTop": 14,
          }
        }
        testID="root-screen-body"
      >
        <RCTScrollView
          contentContainerStyle={
            {
              "gap": 18,
              "paddingBottom": 18,
            }
          }
        >
          <View>
            <View
              style={
                {
                  "gap": 7,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#8A9099",
                    "fontSize": 11,
                    "fontWeight": "400",
                    "letterSpacing": 0.04,
                    "textTransform": "uppercase",
                  }
                }
              >
                Active
              </Text>
              <View
                accessibilityLabel="Upper/Lower"
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "backgroundColor": "#1A1C1F",
                      "borderColor": "#4A5A20",
                      "borderRadius": 10,
                      "borderWidth": 1,
                      "gap": 10,
                      "paddingHorizontal": 16,
                      "paddingVertical": 16,
                    },
                    false,
                  ]
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "gap": 7,
                      "justifyContent": "space-between",
                    }
                  }
                >
                  <Text
                    numberOfLines={1}
                    style={
                      {
                        "color": "#F5F5F4",
                        "flex": 1,
                        "fontSize": 19,
                        "fontWeight": "500",
                      }
                    }
                  >
                    Upper/Lower
                  </Text>
                  <View
                    style={
                      [
                        {
                          "alignSelf": "flex-start",
                          "borderRadius": 20,
                          "paddingHorizontal": 7,
                          "paddingVertical": 6,
                        },
                        {
                          "backgroundColor": "#232B0A",
                        },
                      ]
                    }
                  >
                    <Text
                      style={
                        [
                          {
                            "fontSize": 10,
                            "fontWeight": "400",
                          },
                          {
                            "color": "#CDFF57",
                          },
                        ]
                      }
                    >
                      Active
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    {
                      "flexDirection": "row",
                      "gap": 5,
                    }
                  }
                >
                  <View
                    style={
                      [
                        {
                          "backgroundColor": "#2C3036",
                          "borderRadius": 4,
                          "height": 8,
                          "width": 8,
                        },
                        {
                          "backgroundColor": "#4A5A20",
                        },
                        false,
                      ]
                    }
                    testID="week-dot-done"
                  />
                  <View
                    style={
                      [
                        {
                          "backgroundColor": "#2C3036",
                          "borderRadius": 4,
                          "height": 8,
                          "width": 8,
                        },
                        false,
                        {
                          "backgroundColor": "#CDFF57",
                        },
                      ]
                    }
                    testID="week-dot-current"
                  />
                  <View
                    style={
                      [
                        {
                          "backgroundColor": "#2C3036",
                          "borderRadius": 4,
                          "height": 8,
                          "width": 8,
                        },
                        false,
                        false,
                      ]
                    }
                    testID="week-dot-upcoming"
                  />
                  <View
                    style={
                      [
                        {
                          "backgroundColor": "#2C3036",
                          "borderRadius": 4,
                          "height": 8,
                          "width": 8,
                        },
                        false,
                        false,
                      ]
                    }
                    testID="week-dot-upcoming"
                  />
                  <View
                    style={
                      [
                        {
                          "backgroundColor": "#2C3036",
                          "borderRadius": 4,
                          "height": 8,
                          "width": 8,
                        },
                        false,
                        false,
                      ]
                    }
                    testID="week-dot-upcoming"
                  />
                </View>
                <Text
                  style={
                    {
                      "color": "#8A9099",
                      "fontSize": 13,
                      "fontWeight": "400",
                    }
                  }
                >
                  Week 2 of 5 · started 6 Sep
                </Text>
              </View>
            </View>
            <View
              style={
                {
                  "gap": 7,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#8A9099",
                    "fontSize": 11,
                    "fontWeight": "400",
                    "letterSpacing": 0.04,
                    "textTransform": "uppercase",
                  }
                }
              >
                Planned
              </Text>
              <View>
                <View
                  style={
                    {
                      "borderBottomColor": "#1E2125",
                      "borderBottomWidth": 1,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "gap": 6,
                        "paddingVertical": 10,
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "alignItems": "baseline",
                            "flexDirection": "row",
                          }
                        }
                      >
                        <Text
                          numberOfLines={1}
                          style={
                            {
                              "color": "#F5F5F4",
                              "flexShrink": 1,
                              "fontSize": 14,
                              "fontWeight": "400",
                            }
                          }
                        >
                          Push/Pull/Legs
                        </Text>
                      </View>
                      <Text
                        numberOfLines={1}
                        style={
                          {
                            "color": "#6B7076",
                            "fontSize": 13,
                            "fontWeight": "400",
                          }
                        }
                      >
                        6 weeks · 3 days/week
                      </Text>
                    </View>
                    <View
                      style={
                        {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "gap": 7,
                        }
                      }
                    >
                      <View
                        accessibilityLabel="Start Push/Pull/Legs"
                        accessibilityRole="button"
                        accessibilityState={
                          {
                            "busy": undefined,
                            "checked": undefined,
                            "disabled": undefined,
                            "expanded": undefined,
                            "selected": undefined,
                          }
                        }
                        accessibilityValue={
                          {
                            "max": undefined,
                            "min": undefined,
                            "now": undefined,
                            "text": undefined,
                          }
                        }
                        accessible={true}
                        collapsable={false}
                        focusable={true}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          [
                            {
                              "borderRadius": 20,
                              "borderWidth": 1,
                              "paddingHorizontal": 10,
                              "paddingVertical": 6,
                            },
                            {
                              "backgroundColor": "#CDFF57",
                              "borderColor": "#CDFF57",
                            },
                            false,
                          ]
                        }
                      >
                        <Text
                          style={
                            [
                              {
                                "fontSize": 13,
                                "fontWeight": "400",
                              },
                              {
                                "color": "#232B0A",
                              },
                            ]
                          }
                        >
                          Start
                        </Text>
                      </View>
                      <View
                        accessibilityLabel="More actions for Push/Pull/Legs"
                        accessibilityRole="button"
                        accessibilityState={
                          {
                            "busy": undefined,
                            "checked": undefined,
                            "disabled": false,
                            "expanded": undefined,
                            "selected": undefined,
                          }
                        }
                        accessibilityValue={
                          {
                            "max": undefined,
                            "min": undefined,
                            "now": undefined,
                            "text": undefined,
                          }
                        }
                        accessible={true}
                        collapsable={false}
                        focusable={true}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          [
                            {
                              "alignItems": "center",
                              "borderRadius": 15,
                              "height": 30,
                              "justifyContent": "center",
                              "width": 30,
                            },
                            {
                              "backgroundColor": "#1A1C1F",
                            },
                            false,
                            false,
                          ]
                        }
                      >
                        <Text
                          style={
                            {
                              "color": "#C9CDD2",
                              "fontSize": 15,
                            }
                          }
                        >
                          ⋯
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
            <View
              style={
                {
                  "gap": 7,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#8A9099",
                    "fontSize": 11,
                    "fontWeight": "400",
                    "letterSpacing": 0.04,
                    "textTransform": "uppercase",
                  }
                }
              >
                Completed
              </Text>
              <View>
                <View
                  style={
                    {
                      "borderBottomColor": "#1E2125",
                      "borderBottomWidth": 1,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "gap": 6,
                        "paddingVertical": 10,
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "alignItems": "baseline",
                            "flexDirection": "row",
                          }
                        }
                      >
                        <Text
                          numberOfLines={1}
                          style={
                            {
                              "color": "#F5F5F4",
                              "flexShrink": 1,
                              "fontSize": 14,
                              "fontWeight": "400",
                            }
                          }
                        >
                          Strength Base
                        </Text>
                      </View>
                      <Text
                        numberOfLines={1}
                        style={
                          {
                            "color": "#6B7076",
                            "fontSize": 13,
                            "fontWeight": "400",
                          }
                        }
                      >
                        4 weeks · 18 Jul – 15 Aug
                      </Text>
                    </View>
                    <View
                      style={
                        {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "gap": 7,
                        }
                      }
                    >
                      <View
                        accessibilityLabel="Copy Strength Base"
                        accessibilityRole="button"
                        accessibilityState={
                          {
                            "busy": undefined,
                            "checked": undefined,
                            "disabled": undefined,
                            "expanded": undefined,
                            "selected": undefined,
                          }
                        }
                        accessibilityValue={
                          {
                            "max": undefined,
                            "min": undefined,
                            "now": undefined,
                            "text": undefined,
                          }
                        }
                        accessible={true}
                        collapsable={false}
                        focusable={true}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          [
                            {
                              "borderRadius": 20,
                              "borderWidth": 1,
                              "paddingHorizontal": 10,
                              "paddingVertical": 6,
                            },
                            {
                              "borderColor": "#2A2D31",
                            },
                            false,
                          ]
                        }
                      >
                        <Text
                          style={
                            [
                              {
                                "fontSize": 13,
                                "fontWeight": "400",
                              },
                              {
                                "color": "#C9CDD2",
                              },
                            ]
                          }
                        >
                          Copy
                        </Text>
                      </View>
                      <View
                        accessibilityLabel="More actions for Strength Base"
                        accessibilityRole="button"
                        accessibilityState={
                          {
                            "busy": undefined,
                            "checked": undefined,
                            "disabled": false,
                            "expanded": undefined,
                            "selected": undefined,
                          }
                        }
                        accessibilityValue={
                          {
                            "max": undefined,
                            "min": undefined,
                            "now": undefined,
                            "text": undefined,
                          }
                        }
                        accessible={true}
                        collapsable={false}
                        focusable={true}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          [
                            {
                              "alignItems": "center",
                              "borderRadius": 15,
                              "height": 30,
                              "justifyContent": "center",
                              "width": 30,
                            },
                            {
                              "backgroundColor": "#1A1C1F",
                            },
                            false,
                            false,
                          ]
                        }
                      >
                        <Text
                          style={
                            {
                              "color": "#C9CDD2",
                              "fontSize": 15,
                            }
                          }
                        >
                          ⋯
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RCTScrollView>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`MesocyclesScreen snapshots empty state 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "#0E0F11",
          "flex": 1,
        }
      }
    >
      <RNCSafeAreaView
        edges={
          {
            "bottom": "off",
            "left": "off",
            "right": "off",
            "top": "additive",
          }
        }
        style={
          {
            "backgroundColor": "#141619",
            "paddingBottom": 10,
            "paddingHorizontal": 14,
            "paddingTop": 10,
          }
        }
        testID="root-screen-header"
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 7,
              "justifyContent": "space-between",
            }
          }
        >
          <View
            style={
              {
                "flexShrink": 1,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 7,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#F5F5F4",
                    "flexShrink": 1,
                    "fontSize": 24,
                    "fontWeight": "500",
                  }
                }
              >
                Mesocycles
              </Text>
            </View>
          </View>
          <View
            accessibilityLabel="New mesocycle"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "borderRadius": 15,
                  "height": 30,
                  "justifyContent": "center",
                  "width": 30,
                },
                {
                  "backgroundColor": "#CDFF57",
                },
                false,
                false,
              ]
            }
          >
            <Text
              style={
                {
                  "color": "#232B0A",
                  "fontSize": 22,
                  "fontWeight": "500",
                }
              }
            >
              +
            </Text>
          </View>
        </View>
      </RNCSafeAreaView>
      <View
        style={
          {
            "flex": 1,
            "gap": 7,
            "paddingHorizontal": 14,
            "paddingTop": 14,
          }
        }
        testID="root-screen-body"
      >
        <View
          style={
            {
              "alignItems": "center",
              "gap": 6,
              "paddingHorizontal": 14,
              "paddingVertical": 18,
            }
          }
        >
          <Text
            style={
              {
                "color": "#5A5F65",
                "fontSize": 22,
                "fontWeight": "500",
                "textAlign": "center",
              }
            }
          >
            Plan your first mesocycle
          </Text>
          <Text
            style={
              {
                "color": "#5A5F65",
                "fontSize": 13,
                "textAlign": "center",
              }
            }
          >
            Build a training block, then start it when you're ready.
          </Text>
          <View
            style={
              {
                "marginTop": 7,
              }
            }
          >
            <View
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "borderRadius": 10,
                    "justifyContent": "center",
                    "paddingHorizontal": 15,
                    "paddingVertical": 15,
                  },
                  {
                    "backgroundColor": "#CDFF57",
                  },
                  false,
                  false,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "fontSize": 13,
                      "fontWeight": "400",
                    },
                    {
                      "color": "#232B0A",
                    },
                  ]
                }
              >
                Create mesocycle
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;
